fix: update button hover color for improved visibility

--- a/page/assets/css/contact.css
+++ b/page/assets/css/contact.css
@@ -22,5 +22,5 @@ button {
 }
 
 button:hover {
-    background-color: #414141;
+    background-color: #8d8d8d;
 }
